# Moraine

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE-MIT  Moraine_Development_Blueprint.md  README.md  README.md.moraine.json  ROADMAP.md  SECURITY.md  VISION.md  docker-compose.yml  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: implementation.md
.github/workflows/: ci.yml
.moraine/: .gitignore  README.md  project.json
.moraine/runs/: 2026-07-18-add-local-mcp-transport-and-codex-integr-7416135c.md  2026-07-18-add-local-mcp-transport-and-codex-integr-7416135c.md.moraine.json  2026-07-18-agent-run-protocol-foundation.md  2026-07-18-agent-run-protocol-foundation.md.moraine.json  2026-07-18-apache-2.0-license.md  2026-07-18-apache-2.0-license.md.moraine.json  2026-07-18-v0.2.1-review-correctness.md  2026-07-18-v0.2.1-review-correctness.md.moraine.json  2026-07-20-v0.3-annotation-mutations.md  2026-07-20-v0.3-annotation-mutations.md.moraine.json
crates/moraine-cli/: Cargo.toml  README.md
crates/moraine-cli/src/: codex_setup.rs  doctor.rs  hook_codex.rs  main.rs  relay.rs  run_cli.rs  service_cmd.rs  setup_cmd.rs  suite.rs
crates/moraine-cli/tests/: agent_run_protocol.rs  install_suite_smoke.rs  package_coherence.rs  packaging_install_smoke.rs  share_flow.rs
crates/moraine-core/: Cargo.toml  README.md
crates/moraine-core/src/: annotation_ops.rs  atomic.rs  build_info.rs  comments.rs  discovery.rs  document.rs  error.rs  history.rs  lib.rs  paths.rs  room.rs  run_meta.rs  share.rs  watcher.rs
crates/moraine-core/src/agent_protocol/: append_ops.rs  evidence.rs  findings.rs  git.rs  markdown.rs  mod.rs  ops.rs  project.rs  projection.rs  redaction_nonleak_tests.rs  session.rs  types.rs
crates/moraine-core/tests/: share_and_room.rs
crates/moraine-mcp/: Cargo.toml  README.md
crates/moraine-mcp/src/: lib.rs  server.rs  tools.rs
crates/moraine-mcp/tests/: mcp_stdio_lifecycle.rs
crates/moraine-provision/: Cargo.toml  README.md
crates/moraine-provision/src/: apply.rs  error.rs  health.rs  inspect.rs  journal.rs  lib.rs  plan.rs  service_ready.rs  snapshot.rs  suite.rs  types.rs  verify.rs
crates/moraine-provision/src/agent/: codex.rs  mod.rs
crates/moraine-provision/src/service/: linux_systemd.rs  memory.rs  mod.rs
crates/moraine-provision/tests/: product_capture_spool.rs  provision_lifecycle.rs
crates/moraine-server/: Cargo.toml  README.md
crates/moraine-server/src/: main.rs
crates/moraine-service/: Cargo.toml  README.md
crates/moraine-service/src/: lib.rs  main.rs  service.rs
crates/moraine-service/systemd/: moraine-service.service  moraine-service.service.in
crates/moraine-service/tests/: discovery_http.rs  discovery_index.rs  m3_evidence_capture.rs  spool.rs
docs/: AGENT_RUN_PROTOCOL.md  C3_SURFACE_FREEZE.md  DEMO.md  DEVELOPMENT.md  DEVELOPMENT_BLUEPRINT.md  DEVELOPMENT_BLUEPRINT_ALIGNED.md  INSTALL.md  MCP.md  OUTSIDE_USER_INSTALL_REPORT.md  QUICKSTART.md  REDACTION.md  TROUBLESHOOTING.md
docs/evaluation/2026-07/: 00_BASELINE.md  ARCHITECTURE_AND_INTEGRITY.md  ARCHITECTURE_REVIEW.md  CAPABILITY_INVENTORY.md  CAPABILITY_MATRIX.md  COMPATIBILITY_AND_PORTABILITY.md  CURRENT_STATE.md  DOMAIN_MODEL_REVIEW.md  INTEGRITY_AND_SECURITY_REVIEW.md  LIVE_SCENARIOS.md  PERFORMANCE_AND_SCALE.md  PRODUCT_AND_MARKET_EVALUATION.md  README.md  RECOMMENDED_ROADMAP.md  RELEASE_READINESS.md  RISK_REGISTER.md  SCORECARD.md  SUBSYSTEM_RETENTION.md  SYNTHESIS.md  UX_AND_ONBOARDING_REVIEW.md  UX_ONBOARDING_RELEASE.md
docs/evaluation/2026-07/data/: VERIFICATION.md  capability-matrix.json  scale-results.json
docs/integrations/: CODEX.md
docs/integrations/codex/: EXPECTED_CAPTURE.md  INSTALL.md  PRIVACY.md  README.md  TROUBLESHOOTING.md
docs/screenshots/: README.md
examples/: agent-run-migration.md  welcome.md
scripts/: build-linux-release.sh  c3-lifecycle-smoke.sh  check.sh  dev.sh  server-dev.sh  setup-arch.sh
scripts/packaging/: install.sh  uninstall.sh  write_manifest.py
src/: app.css  app.html  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: append_ops.rs  comments.rs  discovery.rs  document.rs  findings.rs  history.rs  mod.rs  provision.rs  review.rs  system.rs
src-tauri/tests/: csp_config.rs  provision_commands.rs
src/app/: App.smoke.test.tsx  App.tsx  ErrorBoundary.tsx  LegacyDocumentApp.tsx  ServiceHealthBanner.tsx  Workspace.test.tsx  Workspace.tsx  surfaceFreeze.ts  useProductBootstrap.ts
src/features/annotations/: CommentsPanel.tsx
src/features/editor/: Editor.tsx  diskWatch.test.ts  hostSave.ts  lifecycle.test.ts  managedRegion.ts  reviewGate.ts  yjsSession.ts
src/features/findings/: CheckpointFindingsPanel.tsx  checkpointFindings.test.tsx
src/features/ledger/: LedgerTimeline.tsx  ProtocolLedgerPanel.tsx  protocolLedger.test.tsx
src/features/onboarding/: HealthPanel.tsx  OnboardingWizard.test.tsx  OnboardingWizard.tsx
src/features/projects/: ProjectList.tsx
src/features/run-list/: RunList.tsx
src/features/runs/: RunReviewPanel.tsx
src/features/shell/: HistoryPanel.tsx  Preview.tsx  StatusBar.tsx  Toolbar.tsx
src/lib/: api.ts  types.ts
src/lib/components/: CheckpointFindingsPanel.svelte  CommentsPanel.svelte  Editor.svelte  HistoryPanel.svelte  Preview.svelte  RunReviewPanel.svelte  StatusBar.svelte  Toolbar.svelte  checkpointFindings.test.ts
src/lib/editor/: acceptanceRecovery.test.ts  collab.test.ts  collab.ts  commentMark.ts  comments.test.ts  comments.ts  diskWatch.ts  hostSave.test.ts  hostSave.ts  managedRegion.test.ts  markdown.ts  reviewGate.test.ts  reviewGate.ts  yjsSession.ts
src/routes/: +page.svelte
src/shared/api/: annotations.ts  desktop.ts  discovery.ts  findings.ts  index.ts  ledger.ts  provision.ts  runs.ts
src/shared/types/: index.ts
(+5 files in other folders)
