[workspace]
resolver = "2"
members = [
    "crates/moraine-core",
    "crates/moraine-cli",
    "crates/moraine-server",
    "src-tauri",
]
default-members = ["crates/moraine-cli", "crates/moraine-core", "crates/moraine-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/v-t-r-gg/Moraine"
authors = ["Moraine Contributors"]
rust-version = "1.77"
description = "Local-first review ledger for autonomous agent work"

[workspace.dependencies]
moraine-core = { path = "crates/moraine-core" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
notify = "7"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
