[package]
name = "moraine-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "First-class CLI for Moraine — open, edit, sync, and history for Markdown files"
readme = "README.md"

[[bin]]
name = "moraine"
path = "src/main.rs"

[dependencies]
moraine-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
