[package]
name = "moraine-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "CLI for Moraine agent-run protocol, share, status, and local history"
readme = "README.md"

[[bin]]
name = "moraine"
path = "src/main.rs"

[dependencies]
moraine-core.workspace = true
moraine-mcp = { path = "../moraine-mcp" }
anyhow.workspace = true
clap.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dirs.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3"
