[package]
name = "moraine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core library for Moraine: file I/O, history, watchers, and document model"
readme = "README.md"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
notify.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
