[package]
name = "moraine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Moraine domain library: run-record files, history, rooms, agent-run ledger"
readme = "README.md"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
notify.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true
sha2 = { workspace = true }
hex = { workspace = true }
fs4 = { workspace = true }

[dev-dependencies]
tempfile = "3"
