[package]
name = "moraine-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Local STDIO MCP transport for Moraine agent-run protocol"
readme = "README.md"

[dependencies]
moraine-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-io", "schemars"] }
async-trait = "0.1"
futures = "0.3"
schemars = "1.0"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "process", "time"] }
uuid = { workspace = true }
