[package]
name = "moraine-provision"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared installation-state inspection and onboarding for Moraine CLI and desktop"
readme = "README.md"

[dependencies]
moraine-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true }
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3"
