[package]
name = "moraine-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Optional in-memory Yjs relay for live Moraine review sessions"
readme = "README.md"

[[bin]]
name = "moraine-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["ws"] }
clap.workspace = true
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
