[package]
name = "moraine-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Local integration runtime for Moraine (minimal scaffold)"
readme = "README.md"

[[bin]]
name = "moraine-service"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "signal", "fs", "io-util"] }
dirs = { workspace = true }
chrono = { workspace = true }
axum = { version = "0.8" }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
moraine-core.workspace = true
sha2 = { workspace = true }
hex = { workspace = true }
 
[dev-dependencies]
tempfile = "3"
